# JSets

./: .gitignore  LICENSE  README.md  jsets.cabal  lab-schedule.cabal  stack.yaml
app/: Main.hs
res/config/: config
res/help/: doiHelp.txt  helpHelp.txt  issueHelp.txt  jsets.1  jsetsHelp.txt  jsonHelp.txt  matchHelp.txt  meetingsHelp.txt  pmidHelp.txt  queryHelp.txt  ranksHelp.txt  readHelp.txt  refsHelp.txt  tocHelp.txt  yearHelp.txt
res/html/: articleTemplate.html  citationTemplate.html  instrCTemplate.html  instrRTemplate.html  newIssueTemplate.html  rankCiteTemplate.html  rankList.html  ranking.html  ranksTemplate.html  saveInstr.html  saveInstrBasic.html  tocInstr.html  tocMissing.html  tocMissingUrl.html  tocTemplate.html  tocs.html  tocsTemplate.html
res/html/elements/: citation.html
res/html/ranks/: rankList.html  ranks.html
res/html/tocs/: create_save_widgets.html  extra_citations.html  issue_missing_linked.html  meta.html  save_instructions.html  tocs.html
res/markdown/: citationTemplate.mkd
res/mkd/: citation.mkd
res/scripts/ranks/: functions.js
res/scripts/tocs/: classes.js  functions.js  globals.js
res/styles/: ranks.css  tocs.css
src/: AppMonad.hs  Commands.hs  Controller.hs  CoreIO.hs  PubMed.hs  Viewer.hs
src/Model/: Core.hs  Dates.hs  Formatting.hs  Help.hs  Journals.hs  Matching.hs  PubMed.hs  References.hs  Types.hs
src/Model/Core/: Core.hs  CoreIO.hs  CoreTH.hs  Dates.hs  Hungarian.hs  References.hs  Types.hs
src/Model/Parsers/: Basic.hs  CSV.hs  Citations.hs  Config.hs  Core.hs  JSON.hs  JournalSets.hs  PubMed.hs  Rankings.hs  References.hs  Substitution.hs
src/Model/Text/: Core.hs  Formatting.hs  Help.hs  Html.hs  Templates.hs
src/View/: Core.hs  Help.hs  Html.hs  Templates.hs  View.hs
tests/: CoreTests.hs  JournalsTests.hs  Mock.hs  ModelTests.hs  ParserTests.hs  TestReferences.hs  ViewTests.hs
tests/Mock/: Mock.hs  References.hs  toc-test.sh
tests/Mock/html/: cssInsert.html  jsInsert.html  set5-test.txt  tocMock.html
tests/ModelSpec/: Core.hs  Journals.hs  Matching.hs  Parsers.hs  Spec.hs
tests/ViewSpec/: Spec.hs
tests/res/: Biochemistry_V58N49_esearch.json  Biochemistry_V58N49_esummary.json  JSet2019.csv  yearly26Sets_1M.txt  yearly26Sets_1W.txt  yearly26Sets_1W1M.txt  yearly26Sets_2W.txt  yearly26Sets_3M.txt  yearly26Sets_3W.txt  yearlySets_0W2M2F.txt  yearlySets_0W3M2F.txt  yearlySets_6W3M1F.txt  yearlySets_6W3M2F.txt  yearlySets_6W3M52F.txt  yearlySets_6W3M5F.txt
