name:                   jsets
 -- prefix version with '0.' to indicate development version
version:                2.4.3
homepage:               https://github.com/MWRuszczycky/JSets#readme
license:                BSD3
license-file:           LICENSE
author:                 Mark W. Ruszczycky
maintainer:             mwruszczycky@gmail.com
copyright:              2020 Mark W. Ruszczycky
category:               Web
build-type:             Simple
cabal-version:          >=1.10
extra-source-files:     README.md

executable jsets
  hs-source-dirs:       app
  main-is:              Main.hs
  default-language:     Haskell2010
  ghc-options:          -O2 -threaded -W
  build-depends:        base >= 4.7 && < 5
                      , jsets-internal
                      , mtl
                      , text

library jsets-internal
  exposed-modules:      Commands
                      , Controller
                      , AppMonad
                      , Model.Core.Core
                      , Model.Core.CoreIO
                      , Model.Core.CoreTH
                      , Model.Core.Hungarian
                      , Model.Core.Types
                      , Model.Core.Dates
                      , Model.Journals
                      , Model.Matching
                      , Model.PubMed
                      , Model.Parsers.Config
                      , Model.Parsers.Core
                      , Model.Parsers.CSV
                      , Model.Parsers.JSON
                      , Model.Parsers.JournalSets
                      , Model.Parsers.PubMed
                      , Model.Parsers.Rankings
                      , View.Core
                      , View.Help
                      , View.Html
                      , View.Templates
                      , View.View
                      , Paths_jsets
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -O2 -W
  build-depends:        base >= 4.7 && < 5
                      , attoparsec
                      , bytestring
                      , directory
                      , containers
                      , microlens
                      , mtl
                      , template-haskell
                      , text
                      , time
                      , wreq

test-suite model
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       tests
  main-is:              ModelSpec/Spec.hs
  other-modules:        ModelSpec.Core
                      , ModelSpec.Journals
                      , ModelSpec.Matching
                      , Mock.Mock
                      , Mock.References
  build-depends:        base >= 4.7 && < 5
                      , jsets-internal
                      , hspec
                      , mtl
                      , text
                      , time

test-suite view
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       tests
  main-is:              ViewSpec/Spec.hs
  build-depends:        base >= 4.7 && < 5
                      , jsets-internal
                      , hspec
