name:                   lab-schedule
version:                0.1.0.0
homepage:               https://github.com/MWRuszczycky/lab-schedule#readme
license:                BSD3
license-file:           LICENSE
author:                 Mark W. Ruszczycky
maintainer:             mwruszczycky@gmail.com
copyright:              2020 Mark W. Ruszczycky
category:               Web
build-type:             Simple
cabal-version:          >=1.10
extra-source-files:     README.md

executable lab-schedule
  hs-source-dirs:       app
  main-is:              Main.hs
  default-language:     Haskell2010
  ghc-options:          -O2 -threaded -W
  build-depends:        base >= 4.7 && < 5
                      , lab-schedule-internal

library lab-schedule-internal
  exposed-modules:      Controller
                      , Model.Core
                      , Model.Types
                      , Model.Dates
                      , Model.Journals
                      , Model.References
                      , Model.Parsers.CSV
                      , Model.Parsers.JournalSets
                      , Viewer
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -O2 -W
  build-depends:        base >= 4.7 && < 5
                      , attoparsec
                      , containers
                      , text
                      , time

test-suite model
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       tests
  main-is:              ModelTests.hs
  other-modules:        JournalsTests
                      , CoreTests
  build-depends:        base >= 4.7 && < 5
                      , lab-schedule-internal
                      , hspec
                      , text
                      , time
